# tareas

./: main.py  pyproject.toml
controllers/: tareaController.py  userController.py
src/: main.py
src/controllers/: tareaController.py  userController.py
src/models/: dataBase.py  schemas.py  tareas.py  users.py  usuarios.sql
src/view/: loginView.py
